# inventory-client/openapi.yaml
@@ -2656,26 +2656,21 @@ paths:
                     type: integer
                 variants:
                   type: array
-                  description: 'SKU 變體陣列。'
+                  description: 'SKU 變體陣列，至少需要一項。'
                   example:
                     - []
                   items:
                     type: object
                     properties:
-                      id:
-                        type: integer
-                        description: 'The <code>id</code> of an existing record in the product_variants table.'
-                        example: 17
-                        nullable: false
                       sku:
                         type: string
-                        description: 'Must not be greater than 100 characters.'
-                        example: mqeopfuudtdsufvyvddqa
+                        description: '單一 SKU 變體的唯一庫存單位編號。. Must not be greater than 255 characters.'
+                        example: HEADPHONE-BT-RED-L
                         nullable: false
                       price:
                         type: number
-                        description: 'Must be at least 0.'
-                        example: 45
+                        description: '單一 SKU 變體的價格。. Must be at least 0.'
+                        example: 199.99
                         nullable: false
                       attribute_value_ids:
                         type: array
@@ -2688,14 +2683,9 @@ paths:
                         type: object
                         description: ''
                         example:
-                          id: 1
+                          sku: '"TSHIRT-RED-S"'
                         nullable: false
                         properties:
-                          id:
-                            type: integer
-                            description: '變體的 ID（用於更新現有變體）。'
-                            example: 1
-                            nullable: false
                           sku:
                             type: string
                             description: 'SKU 的唯一編號。'
@@ -2723,6 +2713,8 @@ paths:
                       - price
               required:
                 - name
+                - attributes
+                - variants
     delete:
       summary: 刪除指定的商品
       operationId: ''
